--- a/templates/admin/add-doctor.html.twig
+++ b/templates/admin/add-doctor.html.twig
@@ -90,7 +90,7 @@
 	</div>
 </div>
     <div class="panel-body">
-<label>ACCREDITATION INFORMATION <span style="color:red;">(*For Doctors only)</span></label>
+<label>ACCREDITATION INFORMATION</label>
 <div class="la lang">
 
 <div class="form-group col-md-4">
