--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -22,7 +22,7 @@
                 <li class="divider"></li>
                 <li class="dropdown-header">Manage Doctors/Patients/Diagnosis</li>
                 <li><a href="{{ path('doctor') }}">Add Doctor</a></li>
-                <li><a href="{{ path('patient') }}">Add Patient</a></li>
+                <li><a href="{{ path('patient-add') }}">Add Patient</a></li>
                 <li><a href="{{ path('add_diagnosis_category') }}">Add Diagnosis Category</a></li>
               </ul>
             </li>
