--- a/templates/admin/addClinic.html.twig
+++ b/templates/admin/addClinic.html.twig
@@ -37,7 +37,14 @@
     <div class="panel-heading"><h3>Add Clinic <a href="{{ path('clinic_list') }}" class="btn btn-info pull-right btn-sm">View Clinic List</a></h3></div>
     <div class="panel-body">
 		
-		{{ form_start(form) }}
+    {% for msg in app.session.flashBag.get('success') %}
+                <div class="alert alert-success">
+                    {{ msg }}
+                </div>
+            {% endfor %}
+		
+
+    {{ form_start(form) }}
 			<div class="form-group col-md-6">
         <label>Clinic Name:</label>
 			{{ form_widget(form.clinicName) }}
@@ -46,15 +53,15 @@
         <label>Clinic Email:</label>
       {{ form_widget(form.email) }}
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-5">
       <label>Opening Time:</label>
       {{ form_widget(form.schedStart) }}
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-5">
       <label>Closing Time:</label>
       {{ form_widget(form.schedEnd) }}
     </div>
-		<div class="form-group col-md-4" style="margin-top:15px;">
+		<div class="form-group col-md-2" style="margin-top:25px;">
 			<input type="submit" class="btn btn-success" value="Add Clinic">
 		</div>
 		{{ form_end(form) }}	
