--- a/templates/admin/categorylist.html.twig
+++ b/templates/admin/categorylist.html.twig
@@ -38,20 +38,22 @@
 <div class="panel-body">
       <div class="table-responsive">
         <table class="table">
-          <tr>
-            <th>NAME</th>
-            <th>ACTIONS</th>
-          </tr>
-          <tr>
-        {% for category in diagnosiscategories %}
-            <td>{{ category.diagnosisName }}</td>
-            <td><a href="{{ path('user_edit', { 'id': category.id }) }}" class="btn btn-info btn-sm">EDIT</a>
-            <a href="{{ path('user_delete', { 'id': category.id }) }}"  class="btn btn-danger btn-sm">DELETE</a></td>
+      <thead>
+        <tr>
+          <th>NAME</th>
+          <th>ACTIONS</th>
         </tr>
-{% else %}
-        {% endfor %}
-        </table>
-      </div>
+      </thead>
+      <tbody>
+        <tr>
+          {% for category in diagnosiscategories %}
+            <td>{{ category.diagnosisName }}</td>
+            <td><a href="{{ path('user_edit', { 'id': category.id }) }}" class="btn btn-primary btn-xs">EDIT</a>
+            <a href="{{ path('user_delete', { 'id': category.id }) }}" class="btn btn-danger btn-xs">DELETE</a></td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
 
       </div>
 		</div>
