--- a/templates/admin/cliniclist.html.twig
+++ b/templates/admin/cliniclist.html.twig
@@ -22,7 +22,7 @@
                 <li class="divider"></li>
                 <li class="dropdown-header">Manage Doctors/Patients/Diagnosis</li>
                 <li><a href="{{ path('doctor') }}">Add Doctor</a></li>
-                <li><a href="{{ path('patient') }}">Add Patient</a></li>
+                <li><a href="{{ path('patient-add') }}">Add Patient</a></li>
                 <li><a href="{{ path('add_diagnosis_category') }}">Add Diagnosis Category</a></li>
               </ul>
             </li>
@@ -39,6 +39,12 @@
     <div class="panel-heading"><h3>Clinic Information <a href="{{ path('add_clinic') }}" class="btn btn-info pull-right btn-sm">Add Clinic</a></h3></div>
     <div class="panel-body">
 
+{% for msg in app.session.flashBag.get('success') %}
+                <div class="alert alert-warning">
+                    {{ msg }}
+                </div>
+            {% endfor %}
+
       <div class="table-responsive">
     <table class="table">
       <thead>
@@ -52,8 +58,11 @@
         <tr>
           <td>{{ clinic.clinicName }}</td>
           <td>
-            <a href="#" class="btn btn-info">Edit</a>
-            <a href="#" class="btn btn-danger">Delete</a>
+            <form method="post" action="{{ path('clinic_delete', {'id': clinic.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ clinic.id) }}">
+            <button class="btn btn-danger btn-sm">DELETE</button>
+</form>
           </td>
         </tr>
       {% endfor %}
