--- a/templates/admin/doctorlist.html.twig
+++ b/templates/admin/doctorlist.html.twig
@@ -51,8 +51,8 @@
 					<td>{{ doctor.userInfo.lname }}, {{ doctor.userInfo.fname }} {{ doctor.userInfo.mname }}, {{ doctor.userInfo.suffix }}</td>
 					<td> {{ doctor.accreditationinfo.accreditationcode }}</td>
 					<td>
-						<a href="#" class="btn btn-info">Edit</a>
-						<a href="#" class="btn btn-danger">Delete</a>
+						<a href="{{ path('user_edit_profile', { 'id': doctor.id }) }}" class="btn btn-info btn-xs">EDIT</a>
+						<a href="{{ path('user_profile_show', { 'id': doctor.id }) }}" class="btn btn-danger btn-xs">SHOW</a>
 					</td>
 				</tr>
 			{% endfor %}
