--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/resources/demos/style.css">
 <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
         {% endblock %}
     </head>
     <body>
@@ -23,6 +24,8 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+              {# Datepicker #}
               <script>
               $( function() {
                 $( ".datepicker" ).datepicker();
@@ -33,6 +36,23 @@
                 $('.table').DataTable();
             } );
               </script>
+
+              {# Timepicker #}
+              <script>
+          $('.timepicker').timepicker({
+          timeFormat: 'h:mm p',
+          interval: 60,
+          minTime: '10',
+          maxTime: '6:00pm',
+          defaultTime: '11',
+          startTime: '10:00',
+          dynamic: false,
+          dropdown: true,
+          scrollbar: true
+      });
+          </script>
+
+          {# Login #}
         	<script>
         		$(function() {
 
@@ -52,9 +72,7 @@
 					});
 
 				});
-
         	</script>
-
         {% endblock %}
     </body>
 </html>
