--- a/templates/user_info/index.html.twig
+++ b/templates/user_info/index.html.twig
@@ -39,21 +39,16 @@
     <div class="panel-body">
     
 <div class="table-responsive">
-    <table class="table">
+    <table class="table" style="text-align:center;">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Actions</th>
+                <th style="text-align:center;">Name</th>
             </tr>
         </thead>
         <tbody>
         {% for user_info in user_infos %}
             <tr>
                 <td>{{ user_info.lname }}, {{ user_info.fname }} {{ user_info.mname }}, {{ user_info.suffix }}</a></td>
-                <td>
-                    <a href="{{ path('user_info_edit', {'id': user_info.id}) }}" class="btn btn-info btn-sm">EDIT</a>
-                    <a href="{{ path('user_info_delete', {'id': user_info.id}) }}" class="btn btn-danger btn-sm">DELETE</a>
-                </td>
             </tr>
         {% else %}
         {% endfor %}
