--- a/templates/admin/user_profile.html.twig
+++ b/templates/admin/user_profile.html.twig
@@ -28,7 +28,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Logout</a></li>
+            <li><a href="{{ path('logout') }}">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
