--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -4,36 +4,40 @@
 
 {% block body %}
 <div class="container">
-    	<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div class="panel panel-login">
-					<div class="panel-heading">
-						<div class="row">
-							<div class="col-xs-12">
-								<a href="#" class="active" id="login-form-link">Login</a>
-							</div>
-						<hr>
-					</div>
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<div class="panel panel-login">
+				<div class="panel-heading">
+					<div class="row">
+						<div class="col-xs-12">
+						<a href="#" class="active" id="login-form-link">Login</a>
+						</div>
+					<hr>
+				</div>
 					{# LOGIN  #}
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-lg-12">
-								{% if errors %}
-								    <div>{{ errors.messageKey|trans(errors.messageData, 'security') }}</div>
-								{% endif %}
-								<form id="login-form" action="{{ path('login') }}" method="post" role="form" style="display: block;">
-									<div class="form-group">
-										<input type="text" name="_username" {# id="username" #} tabindex="1" class="form-control" placeholder="Username" value="{{ last_username }}">
-									</div>
-									<div class="form-group">
-										<input type="password" name="_password" {# id="password" #} tabindex="2" class="form-control" placeholder="Password">
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-sm-6 col-sm-offset-3">
-												<input type="hidden" name="home" value="{{ path('admin')}}" />
-    											<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
-												<input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-info" value="Log In">
+<div class="panel-body">
+	<div class="row">
+		<div class="col-lg-12">
+			{% if errors %}
+			    <div class="alert alert-danger fade in">
+			    	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+			    	{{ errors.messageKey|trans(errors.messageData, 'security') }}</div>
+				{% endif %}
+	<form id="login-form" action="{{ path('login') }}" method="post" role="form" style="display: block;">
+		<div class="form-group">
+			<input type="text" name="_username" id="username" tabindex="1" class="form-control" placeholder="Username" value="{{ last_username }}">
+		</div>
+		<div class="form-group">
+			<input type="password" name="_password" id="password" tabindex="2" class="form-control" placeholder="Password">
+		</div>
+
+	<div class="form-group">
+		<div class="row">
+			<div class="col-sm-6 col-sm-offset-3">
+				<input type="hidden" name="home" value="{{ path('admin')}}" />
+				<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+				<input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-info" value="Log In">
+				
 											</div>
 										</div>
 									</div>
