--- a/templates/patient/index.html.twig
+++ b/templates/patient/index.html.twig
@@ -11,7 +11,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Logout</a></li>
+            <li><a href="{{ path('logout') }}">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
