--- a/templates/admin/edit_patient_profile.html.twig
+++ b/templates/admin/edit_patient_profile.html.twig
@@ -11,7 +11,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="{{ path('admin') }}">Home</a></li>
-            <li><a href="{{ path('user_info_index') }}">Manage Users</a></li>
+            <li><a href="{{ path('user_info_index') }}">Users</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage Clinic <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -36,10 +36,10 @@
 <div class="container">
       {{ form_start(edit_patient_form) }}
 <div class="panel panel-default">
-    <div class="panel-heading"><h3>Edit Profile <input type="submit" value="UPDATE" class="btn btn-success pull-right"/></h3></div>
+    <div class="panel-heading"><h3>Edit Profile <input type="submit" value="SAVE CHANGES" class="btn btn-success pull-right"/></h3></div>
 
 <div class="panel-body">
-<label>USER LOGIN DETAILS</label>
+{# <label>USER LOGIN DETAILS</label>
 <div class="form-group col-md-12">
 <label>Username:</label>
 {{ form_widget(edit_patient_form.username) }}
@@ -47,42 +47,42 @@
 <div class="form-group col-md-12">
 {{ form_widget(edit_patient_form.plainPassword) }}
 </div>
-</div>
+</div> #}
 
 <div class="panel-body">
 <label>USER INFORMATION</label>
 <div class="la lang">
 <div class="form-group col-md-4">
   <label>First Name:</label>
-    {{ form_widget(edit_patient_form.userinfo.fname) }}
+    {{ form_widget(edit_patient_form.fname) }}
 </div>
 <div class="form-group col-md-2">
   <label>Middle Name:</label>
-    {{ form_widget(edit_patient_form.userinfo.mname) }}
+    {{ form_widget(edit_patient_form.mname) }}
 </div>
 <div class="form-group col-md-4">
   <label>Last Name:</label>
-    {{ form_widget(edit_patient_form.userinfo.lname) }}
+    {{ form_widget(edit_patient_form.lname) }}
   </div>
 <div class="form-group col-md-2">
   <label>Suffix:</label>
-    {{ form_widget(edit_patient_form.userinfo.suffix) }}
+    {{ form_widget(edit_patient_form.suffix) }}
 </div>
 <div class="form-group col-md-6">
   <label>Gender:</label>
-    {{ form_widget(edit_patient_form.userinfo.gender) }}
+    {{ form_widget(edit_patient_form.gender) }}
 </div>
 <div class="form-group col-md-6">
   <label>Civil Status:</label>
-    {{ form_widget(edit_patient_form.userinfo.civil_status) }}
+    {{ form_widget(edit_patient_form.civil_status) }}
 </div>
 <div class="form-group col-md-6">
   <label>Current Address:</label>
-    {{ form_widget(edit_patient_form.userinfo.address) }}
+    {{ form_widget(edit_patient_form.address) }}
 </div>
 <div class="form-group col-md-6">
   <label>Birthdate:</label>
-    {{ form_widget(edit_patient_form.userinfo.birthdate) }}
+    {{ form_widget(edit_patient_form.birthdate) }}
 </div>
 {{ form_end(edit_patient_form) }}
 </div>
