--- a/templates/admin/cliniclist.html.twig
+++ b/templates/admin/cliniclist.html.twig
@@ -11,7 +11,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="{{ path('admin') }}">Home</a></li>
-            <li><a href="{{ path('user_info_index') }}">Manage Users</a></li>
+            <li><a href="{{ path('user_info_index') }}">Users</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage Clinic <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -61,6 +61,7 @@
             <form method="post" action="{{ path('clinic_delete', {'id': clinic.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
             <input type="hidden" name="_method" value="DELETE">
             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ clinic.id) }}">
+            <a href="{{ path('clinic_info_show', { 'id': clinic.id }) }}" class="btn btn-info btn-sm">SHOW</a>
             <button class="btn btn-danger btn-sm">DELETE</button>
 </form>
           </td>
