--- a/templates/admin/doctorlist.html.twig
+++ b/templates/admin/doctorlist.html.twig
@@ -10,7 +10,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="{{ path('admin') }}">Home</a></li>
-            <li><a href="{{ path('user_info_index') }}">Manage Users</a></li>
+            <li><a href="{{ path('user_info_index') }}">Users</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage Clinic <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
@@ -52,7 +52,7 @@
 					<td> {{ doctor.accreditationinfo.accreditationcode }}</td>
 					<td>
 						<a href="{{ path('user_edit_profile', { 'id': doctor.id }) }}" class="btn btn-info btn-xs">EDIT</a>
-						<a href="{{ path('user_profile_show', { 'id': doctor.id }) }}" class="btn btn-danger btn-xs">SHOW</a>
+						<a href="{{ path('user_info_show', { 'id': doctor.id }) }}" class="btn btn-danger btn-xs">SHOW</a>
 					</td>
 				</tr>
 			{% endfor %}
