--- a/templates/doctor/add_diagnosis.html.twig
+++ b/templates/doctor/add_diagnosis.html.twig
@@ -21,15 +21,7 @@
 
 <div class="container">
   <div class="panel panel-default">
-    <div class="panel-heading"><h4>Add Diagnosis
-      
-  <p class="pull-right">Patient Name: 
-
-    {% for patient in patients %}
-    {{ patient.userInfo.fname }} {{ patient.userInfo.mname }} {{ patient.userInfo.lname }}</p>
-      {% endfor %}
-
-    </h4></div>
+    <div class="panel-heading"><h4>Add Diagnosis</h4></div>
 
 
     <div class="panel-body">
@@ -47,11 +39,17 @@
       <label>Diagnosis Category:</label>
       {{ form_widget(form.diagnosiscategory) }}
     </div>
-    <div class="form-group col-md-8">
+    <div class="form-group col-md-5">
       <label>Diagnosis:</label>
       {{ form_widget(form.diagnosis) }}
+    </div><div class="form-group col-md-3">
+      <label>Payment:</label>
+      {{ form_widget(form.payment) }}
     </div>
-    <div class="form-group col-md-12">
+    <div class="form-group col-md-6">
+      <a href="{{ path('doctor-home') }}" class="btn btn-danger">CANCEL</a>
+    </div>
+    <div class="form-group col-md-6">
       <input type="submit" name="save" value="SAVE" class="btn btn-success pull-right">
     </div>
       {{ form_end (form)}}
